wip - calculator page - adding css animation support

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -1,10 +1,10 @@
 //views
+@import 'views/application';
+@import 'views/calculator';
 
 //modals
 
 //components
 
 // application wide styles and overrides
-@import 'views/application';
-@import 'views/calculator';
-
+@import 'transitions';
