sap calculator - wip

--- a/src/assets/stylus/components/sap-calculator.styl
+++ b/src/assets/stylus/components/sap-calculator.styl
@@ -2,14 +2,21 @@
 
     .list-oils-selector {
         ul {
-            height: 320px;
-            max-height: 320px;
+            height: 330px;
+            max-height: 330px;
         }
     }
 
-    .properties-oil {
-        max-height: 364px;
+    .properties-oil, .recipe-oils-container {
+        height: 374px;
+        max-height: 374px;
         overflow-y: auto;
+    }
+
+    .recipe-oils {
+        input {
+            height: 25px;
+        }
     }
 
 }
