--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -6,6 +6,7 @@
 
 //components
 @import 'components/grid-oil';
+@import 'components/list-oils-recipe';
 @import 'components/list-oils-selector';
 @import 'components/properties-oil';
 @import 'components/sap-calculator';
