--- a/src/assets/stylus/views/application.styl
+++ b/src/assets/stylus/views/application.styl
@@ -1,5 +1,19 @@
 #application {
 
+    button.btn-xxs {
+        padding: 1px 3px;
+        font-size: 10px;
+    }
+
+    input.short-numeric {
+        height: 25px;
+        width: 60px;
+    }
+
+    .t-table {
+        display: table;
+    }
+
     .t-cell {
         display: table-cell;
     }
@@ -13,4 +27,13 @@
         overflow: hidden;
         text-overflow: ellipsis;
     }
+
+    .no-select {
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -khtml-user-select: none;
+        -ms-user-select: none;
+    }
+
+
 }
