calculator cleanup and styling

--- a/src/assets/stylus/components/list-oils-recipe.styl
+++ b/src/assets/stylus/components/list-oils-recipe.styl
@@ -1,4 +1,13 @@
 .list-oils-recipe {
+
+    td.value {
+        min-width: 83px;
+
+        .short-numeric {
+            width: 50px !important;
+        }
+    }
+
     .unit {
         color: #aeaeae;
         padding-left: 5px;
