--- a/src/assets/stylus/components/list-oils-selector.styl
+++ b/src/assets/stylus/components/list-oils-selector.styl
@@ -1,15 +1,15 @@
 .list-oils-selector {
-    ul {
+    .oils-container {
         overflow-y: auto;
 
-        li {
+        td {
             &:hover {
                 cursor: pointer;
                 background-color: #ebebeb;
             }
 
             &.selected {
-                background-color: #f2f2f2;
+                background-color: #d5edf2;
             }
         }
     }
