--- a/src/assets/stylus/components/sap-calculator.styl
+++ b/src/assets/stylus/components/sap-calculator.styl
@@ -1,15 +1,14 @@
 .sap-calculator {
 
     .list-oils-selector {
-        ul {
+        .oils-container {
             height: 250px;
             max-height: 250px;
         }
     }
 
     .properties-oil, .recipe-oils-container {
-        height: 294px;
-        max-height: 294px;
+        max-height: 285px;
         overflow-y: auto;
     }
 
