--- a/src/assets/stylus/views/application.styl
+++ b/src/assets/stylus/views/application.styl
@@ -10,6 +10,13 @@
         width: 60px;
     }
 
+    table.table-super-condensed {
+        td {
+            padding-top: 2px;
+            padding-bottom: 2px;
+        }
+    }
+
     .t-table {
         display: table;
     }
@@ -34,6 +41,5 @@
         -khtml-user-select: none;
         -ms-user-select: none;
     }
-
 
 }
