--- a/src/assets/stylus/views/application.styl
+++ b/src/assets/stylus/views/application.styl
@@ -1,7 +1,7 @@
 #application {
 
     button.btn-xxs {
-        padding: 1px 3px;
+        padding: 1px 5px;
         font-size: 10px;
     }
 
@@ -40,6 +40,23 @@
         -moz-user-select: none;
         -khtml-user-select: none;
         -ms-user-select: none;
+    }
+
+    .panel-info > .panel-heading {
+        background-color: #3434F5;
+    }
+
+    .panel-success > .panel-heading {
+        background-color: #00BD6C;
+    }
+
+    .alert {
+        padding: 2px 10px;
+        margin: 0 15px 15px 15px;
+    }
+
+    .alert-warning {
+        background-color: #f28700;
     }
 
 }
