--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -1,3 +1,5 @@
+@import 'variables';
+
 //views
 @import 'views/application';
 @import 'views/calculator';
@@ -5,11 +7,14 @@
 //modals
 
 //components
+@import 'components/footer';
 @import 'components/grid-oil';
 @import 'components/list-oils-recipe';
 @import 'components/list-oils-selector';
 @import 'components/properties-oil';
 @import 'components/sap-calculator';
+@import 'components/share-this';
 
 // application wide styles and overrides
+@import 'overrides';
 @import 'transitions';
