--- a/src/assets/stylus/views/application.styl
+++ b/src/assets/stylus/views/application.styl
@@ -42,21 +42,8 @@
         -ms-user-select: none;
     }
 
-    .panel-info > .panel-heading {
-        background-color: #3434F5;
-    }
-
-    .panel-success > .panel-heading {
-        background-color: #00BD6C;
-    }
-
-    .alert {
-        padding: 2px 10px;
-        margin: 0 15px 15px 15px;
-    }
-
-    .alert-warning {
-        background-color: #f28700;
+    #application-view > .container {
+        padding-bottom: 20px;
     }
 
 }
