# add text editor to enter notes + description # recipe save

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -14,6 +14,7 @@
 @import 'components/properties-oil';
 @import 'components/sap-calculator';
 @import 'components/share-this';
+@import 'components/text-editor';
 
 // application wide styles and overrides
 @import 'overrides';
