--- a/src/assets/stylus/components/grid-oil.styl
+++ b/src/assets/stylus/components/grid-oil.styl
@@ -30,6 +30,7 @@
             float: left;
             width: 50%;
             text-align: right;
+            padding-right: 2px;
         }
 
         .griddle-settings {
@@ -82,6 +83,7 @@
 
     .toolbar {
         margin-bottom: 10px;
+        padding-right: 2px;
 
         button {
             margin-left: 5px;
