# signup and signin wip

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -7,10 +7,12 @@
 //modals
 
 //components
+@import 'components/animated-modal';
 @import 'components/footer';
 @import 'components/grid-oil';
 @import 'components/list-oils-recipe';
 @import 'components/list-oils-selector';
+@import 'components/media-signin-buttons';
 @import 'components/properties-oil';
 @import 'components/sap-calculator';
 @import 'components/share-this';
