--- a/src/assets/stylus/views/application.styl
+++ b/src/assets/stylus/views/application.styl
@@ -46,4 +46,24 @@
         padding-bottom: 20px;
     }
 
+    .strike {
+        position: relative;
+
+        border-bottom: 1px #ddd solid;
+        height: 20px;
+
+        margin-bottom: 20px;
+
+        .or {
+            position: absolute;
+            left: 45%;
+            top: 7px;
+
+            padding: 0 3px;
+
+            background-color: #f9f9f9;
+        }
+
+    }
+
 }
