--- a/src/assets/stylus/components/footer.styl
+++ b/src/assets/stylus/components/footer.styl
@@ -6,13 +6,15 @@
     width: 100%;
     height: footer-height;
 
-    color: #007457;
-    background-color: #4de6c4; //##58A6E6 //#4EE9AB //#6966EA
+    color: #BAB9F9;
+    background-color: #6966EA; //##58A6E6 //#4EE9AB //#6966EA //#55ffdc
     border-color: transparent;
 
-    -webkit-box-shadow: 0px -1px 2px rgba(0,0,0, 0.3);
-    -moz-box-shadow:    0px -1px 2px rgba(0,0,0, 0.3);
     box-shadow:         0px -1px 2px rgba(0,0,0, 0.3);
+
+    a {
+        color: #2724D0;
+    }
 
     .content {
         font-size: 15px;
