implement facebook and google client-side signup - wip

--- a/src/assets/stylus/components/footer.styl
+++ b/src/assets/stylus/components/footer.styl
@@ -6,17 +6,21 @@
     width: 100%;
     height: footer-height;
 
-    color: #BAB9F9;
-    background-color: #6966EA; //##58A6E6 //#4EE9AB //#6966EA //#55ffdc
+    color: #AAD8FF;
+    background-color: #2925FF; //##58A6E6 //#4EE9AB //#6966EA //#55ffdc
     border-color: transparent;
 
     box-shadow:         0px -1px 2px rgba(0,0,0, 0.3);
 
     a {
-        color: #2724D0;
+        color: #FFC000;
     }
 
     .content {
         font-size: 15px;
     }
+
+        .share-this {
+            padding-top: 10px;
+        }
 }
