signup / login / current user functionality plus profile pages wip

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -13,6 +13,7 @@
 @import 'components/list-oils-recipe';
 @import 'components/list-oils-selector';
 @import 'components/media-signin-buttons';
+@import 'components/navbar-component';
 @import 'components/properties-oil';
 @import 'components/sap-calculator';
 @import 'components/share-this';
