add oil selected modal

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -5,6 +5,7 @@
 @import 'views/calculator';
 
 //modals
+@import 'modals/select-oils';
 
 //components
 @import 'components/animated-modal';
@@ -17,6 +18,7 @@
 @import 'components/properties-oil';
 @import 'components/sap-calculator';
 @import 'components/share-this';
+@import 'components/spinner';
 @import 'components/text-editor';
 
 // application wide styles and overrides
