# refactor login and signup forms into own components for better re-use # show modal when saving recipe as anon for signup / register

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -6,6 +6,7 @@
 
 //modals
 @import 'modals/select-oils';
+@import 'modals/signup-or-login-to-save-changes';
 
 //components
 @import 'components/animated-modal';
@@ -22,5 +23,6 @@
 @import 'components/text-editor';
 
 // application wide styles and overrides
+@import 'global';
 @import 'overrides';
 @import 'transitions';
