print recipe view

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -3,6 +3,7 @@
 //views
 @import 'views/application';
 @import 'views/calculator';
+@import 'views/print-recipe';
 
 //modals
 @import 'modals/select-oils';
