--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -4,6 +4,8 @@
 @import 'views/application';
 @import 'views/calculator';
 @import 'views/print-recipe';
+@import 'views/recipe';
+@import 'views/recipes';
 
 //modals
 @import 'modals/select-oils';
@@ -18,10 +20,12 @@
 @import 'components/media-signin-buttons';
 @import 'components/navbar-component';
 @import 'components/properties-oil';
+@import 'components/recipe-list-item';
 @import 'components/sap-calculator';
 @import 'components/share-this';
 @import 'components/spinner';
 @import 'components/text-editor';
+@import 'components/user-avatar';
 
 // application wide styles and overrides
 @import 'global';
