--- a/src/assets/stylus/views/recipe.styl
+++ b/src/assets/stylus/views/recipe.styl
@@ -1,3 +1,25 @@
 #recipe {
+    h1 {
+        font-size: 30px;
+    }
 
+    .fb_iframe_widget,
+    .fb_iframe_widget span,
+    .fb_iframe_widget span iframe[style] {
+        min-width: 100% !important;
+        width: 100% !important;
+    }
+
+    #google > div {
+        width: 100% !important;
+    }
+
+    .description {
+        font-size: 16px;
+
+        padding-bottom: 2px;
+        margin-bottom: 20px;
+
+        border-bottom: 1px solid #e5e5e5;
+    }
 }
