encapsulate google and fb comments in components that destroy on re-render to dynamically load correct href comments

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -13,7 +13,9 @@
 
 //components
 @import 'components/animated-modal';
+@import 'components/facebook-comments';
 @import 'components/footer';
+@import 'components/google-comments';
 @import 'components/grid-oil';
 @import 'components/list-oils-recipe';
 @import 'components/list-oils-selector';
