# encapsulate print view for re-use in print calculator and saved recipes

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -3,7 +3,6 @@
 //views
 @import 'views/application';
 @import 'views/calculator';
-@import 'views/print-recipe';
 @import 'views/recipe';
 @import 'views/recipes';
 
@@ -23,6 +22,7 @@
 @import 'components/navbar-component';
 @import 'components/properties-oil';
 @import 'components/recipe-list-item';
+@import 'components/recipe-print-area';
 @import 'components/sap-calculator';
 @import 'components/share-this';
 @import 'components/spinner';
