--- a/src/assets/stylus/modals/signup-or-login-to-save-changes.styl
+++ b/src/assets/stylus/modals/signup-or-login-to-save-changes.styl
@@ -1,5 +1,10 @@
 .signup-or-login-to-save-changes {
 
+    .alert {
+        margin: 0;
+        margin-bottom: 30px;
+    }
+
     .strike {
         .or {
             background-color: white;
