--- a/src/assets/stylus/views/recipe.styl
+++ b/src/assets/stylus/views/recipe.styl
@@ -11,4 +11,9 @@
 
         border-bottom: 1px solid #e5e5e5;
     }
+
+    .openByClickOn {
+        display: inline-block;
+        margin-left: 5px;
+    }
 }
