# recipe update to db # decouple recipe display components from calcStore # recipe save form name validation

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -14,6 +14,7 @@
 @import 'components/animated-modal';
 @import 'components/facebook-comments';
 @import 'components/footer';
+@import 'components/form-save-recipe';
 @import 'components/google-comments';
 @import 'components/grid-oil';
 @import 'components/list-oils-recipe';
