# specific oil view # update recipe views

--- a/src/assets/stylus/components/form-save-recipe.styl
+++ b/src/assets/stylus/components/form-save-recipe.styl
@@ -9,4 +9,10 @@
         margin-top: 20px;
     }
 
+        .editor {
+            p {
+                margin-bottom: 3px;
+            }
+        }
+
 }
