--- a/src/assets/stylus/components/recipe-print-area.styl
+++ b/src/assets/stylus/components/recipe-print-area.styl
@@ -14,12 +14,13 @@
 
     table {
         margin-bottom: 0;
+
+        td {
+            padding: 2px !important;
+            margin: 0 !important;
+        }
     }
 
-    td {
-        padding: 0;
-        margin: 0;
-    }
 
     .recipe-breakdown, .recipe-totals, .summary {
         padding: 5px;
