--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -3,6 +3,7 @@
 //views
 @import 'views/application';
 @import 'views/calculator';
+@import 'views/oil';
 @import 'views/recipe';
 @import 'views/recipes';
 
