--- a/src/assets/stylus/views/recipe.styl
+++ b/src/assets/stylus/views/recipe.styl
@@ -1,4 +1,5 @@
 #recipe {
+
     h1 {
         font-size: 30px;
     }
@@ -16,4 +17,11 @@
         display: inline-block;
         margin-left: 5px;
     }
+
+    #notes {
+        p {
+            margin-bottom: 3px;
+        }
+    }
+
 }
