--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -4,6 +4,7 @@
 @import 'views/application';
 @import 'views/calculator';
 @import 'views/oil';
+@import 'views/profile';
 @import 'views/recipe';
 @import 'views/recipes';
 
