# remove share-it buttons as it seems to be loading a tonne of other scripts.. some of which look like ads?... replace with G+ and FB buttons

--- a/src/assets/stylus/components/share-this.styl
+++ b/src/assets/stylus/components/share-this.styl
@@ -2,11 +2,7 @@
     display: table;
 
     .t-cell {
-        .st_fblike_large  {
-            padding-left: 20px;
-            & > span {
-                vertical-align: top !important;
-            }
-        }
+        padding-left: 10px;
+        vertical-align: top;
     }
 }
