--- a/src/assets/stylus/overrides.styl
+++ b/src/assets/stylus/overrides.styl
@@ -43,3 +43,11 @@ body {
 .navbar-brand {
     font-size: 30px;
 }
+
+.alert-dismissible {
+    font-weight: bolder;
+
+    .close {
+        right: 0;
+    }
+}
