# landing page - first iteration # resource page

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -3,6 +3,7 @@
 //views
 @import 'views/application';
 @import 'views/calculator';
+@import 'views/main-landing';
 @import 'views/oil';
 @import 'views/profile';
 @import 'views/recipe';
