adjust landing page - links to reddit and fb pages

--- a/src/assets/stylus/views/main-landing.styl
+++ b/src/assets/stylus/views/main-landing.styl
@@ -8,7 +8,7 @@ header-height = 800px;
         .header {
             position: absolute;
 
-            top: 65px;
+            top: 64px;
             left: 0;
             right: 0;
 
@@ -27,13 +27,16 @@ header-height = 800px;
                 vertical-align: middle;
 
                 h1 {
-                    color: white;
                     font-size: 120px;
+                }
 
-                    text-shadow: -2px -2px 0 #000,
-                    2px -2px 0 #000,
-                    -2px 2px 0 #000,
-                    2px 2px 0 #000;
+                h1, h3 {
+                    color: white;
+
+                    text-shadow: -1px -1px 0 #000,
+                    1px -1px 0 #000,
+                    -1px 1px 0 #000,
+                    1px 1px 0 #000;
                 }
             }
         }
