# tabulate recipe view # fix: login error

--- a/src/assets/stylus/components/recipe-list-item.styl
+++ b/src/assets/stylus/components/recipe-list-item.styl
@@ -1,26 +1,20 @@
 .recipe-list-item {
 
-    padding-bottom: 20px;
+    padding-bottom: 15px;
+
+    .user-avatar {
+        float: right;
+    }
 
     .recipe-name {
         font-size: 20px;
-    }
-
-    .user-avatar {
-        display: inline-block;
-    }
-
-    .description {
-        padding: 5px;
-        border: 1px solid #ebebeb;
-        border-radius: 2px;
     }
 
     .iodine {
         padding-right: 10px;
     }
 
-    .properties, .fats {
+    .properties, .fats, .oils {
 
         li {
             float: left;
