# analytics # update links to reddit and FB pages # fix: not saving recipe description

--- a/src/assets/stylus/components/form-save-recipe.styl
+++ b/src/assets/stylus/components/form-save-recipe.styl
@@ -1,6 +1,7 @@
 .form-save-recipe {
 
     .input-description {
+        padding: 4px;
         min-height: 38px;
         width: 100%;
     }
@@ -9,10 +10,10 @@
         margin-top: 20px;
     }
 
-        .editor {
-            p {
-                margin-bottom: 3px;
-            }
+    .editor {
+        p {
+            margin-bottom: 3px;
         }
+    }
 
 }
