# replace scribe with marked and bootstrap-markdown editor

--- a/src/assets/stylus/views/recipes.styl
+++ b/src/assets/stylus/views/recipes.styl
@@ -1,5 +1,16 @@
 #recipes {
+
     h1 {
         font-size: 30px;
+    }
+
+    .marked-display {
+        p {
+            margin-bottom: 2px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
     }
 }
