--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -22,6 +22,7 @@
 @import 'components/grid-oil';
 @import 'components/list-oils-recipe';
 @import 'components/list-oils-selector';
+@import 'components/markdown-editor';
 @import 'components/media-signin-buttons';
 @import 'components/navbar-component';
 @import 'components/properties-oil';
