--- a/src/assets/stylus/views/recipe.styl
+++ b/src/assets/stylus/views/recipe.styl
@@ -6,11 +6,22 @@
 
     .description {
         font-size: 16px;
+        line-height: 24px;
 
         padding-bottom: 2px;
         margin-bottom: 20px;
 
         border-bottom: 1px solid #e5e5e5;
+
+        .marked-display {
+            p {
+                margin-bottom: 10px;
+
+                &:last-child {
+                    margin-bottom: 5px;
+                }
+            }
+        }
     }
 
     .openByClickOn {
