--- a/src/assets/stylus/views/recipes.styl
+++ b/src/assets/stylus/views/recipes.styl
@@ -6,7 +6,8 @@
 
     .marked-display {
         p {
-            margin-bottom: 2px;
+            line-height: 17px;
+            margin-bottom: 6px;
 
             &:last-child {
                 margin-bottom: 0;
