--- a/src/assets/stylus/components/footer.styl
+++ b/src/assets/stylus/components/footer.styl
@@ -10,7 +10,7 @@
     background-color: #2925FF; //##58A6E6 //#4EE9AB //#6966EA //#55ffdc
     border-color: transparent;
 
-    box-shadow:         0px -1px 2px rgba(0,0,0, 0.3);
+    box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.3);
 
     a {
         color: #FFC000;
@@ -20,7 +20,11 @@
         font-size: 15px;
     }
 
-        .share-this {
-            padding-top: 10px;
+    .share-this {
+        padding-top: 10px;
+
+        [id^=___plusone] {
+            width:72px !important;
         }
+    }
 }
