refs #1 - add support for hybrid (naoh and koh) recipes

--- a/src/assets/stylus/components/sap-calculator.styl
+++ b/src/assets/stylus/components/sap-calculator.styl
@@ -24,4 +24,15 @@
         }
     }
 
+    #mixed-fields {
+        .left-spacer {
+            padding-left: 20px;
+        }
+
+        .alert {
+            margin-top: 20px;
+            padding: 4px 5px;
+        }
+    }
+
 }
