--- a/src/assets/stylus/views/recipe.styl
+++ b/src/assets/stylus/views/recipe.styl
@@ -39,4 +39,13 @@
         margin-bottom: 20px;
     }
 
+    .private {
+        padding-top: 10px;
+
+        .fa-lock {
+            color: #FF9200;
+            font-size: 40px;
+        }
+    }
+
 }
