closes #4 - simple commenting system for oils and recipes

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -14,7 +14,9 @@
 @import 'modals/signup-or-login-to-save-changes';
 
 //components
+@import 'components/add-comment';
 @import 'components/animated-modal';
+@import 'components/commentable';
 @import 'components/facebook-comments';
 @import 'components/footer';
 @import 'components/form-save-recipe';
