# package updates # fix: modal window sometimes has a bad z-index (I think) and isn't clickabe

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -16,6 +16,7 @@
 //components
 @import 'components/add-comment';
 @import 'components/animated-modal';
+@import 'components/bootstrap-modal';
 @import 'components/commentable';
 @import 'components/facebook-comments';
 @import 'components/footer';
