--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -17,7 +17,7 @@
 @import 'components/add-comment';
 @import 'components/animated-modal';
 @import 'components/bootstrap-modal';
-@import 'components/commentable';
+@import 'components/comment';
 @import 'components/facebook-comments';
 @import 'components/footer';
 @import 'components/form-save-recipe';
