closes #16 - add public profiles

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -8,6 +8,7 @@
 @import 'views/profile';
 @import 'views/recipe';
 @import 'views/recipes';
+@import 'views/user-profile';
 
 //modals
 @import 'modals/select-oils';
