closes #18 and #20 - various
* update packages
* add user notification system
* add friendship mechanism
* recipes have additional friendhip provacy setting
* login / signup submit using enter

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -18,6 +18,7 @@
 @import 'components/add-comment';
 @import 'components/animated-modal';
 @import 'components/bootstrap-modal';
+@import 'components/button-user-notifications';
 @import 'components/comment';
 @import 'components/facebook-comments';
 @import 'components/footer';
