--- a/src/assets/stylus/views/recipe.styl
+++ b/src/assets/stylus/views/recipe.styl
@@ -48,4 +48,13 @@
         }
     }
 
+    .private-friends {
+        padding-top: 10px;
+
+        .fa-lock {
+            color: #00C274;
+            font-size: 40px;
+        }
+    }
+
 }
