--- a/src/assets/stylus/views/user-profile.styl
+++ b/src/assets/stylus/views/user-profile.styl
@@ -2,13 +2,16 @@ h1-font-size = 30px;
 
 #user-profile {
 
-    .user-avatar {
-        float: right;
-        padding-right: 20px;
-        padding-top: 20px;
+    .profile-avatar {
+        .user-avatar {
+            float: right;
+            padding-right: 20px;
+            padding-top: 20px;
+        }
+
     }
 
-    .jumbotron {
+    .jumbotron.compact {
         padding-top: 10px;
         padding-left: 20px;
 
@@ -24,5 +27,21 @@ h1-font-size = 30px;
             font-size: h1-font-size - 10px;
         }
     }
+
+    .friends {
+        .button-add-friend {
+            float: left;
+            margin-right: 5px;
+        }
+        .friend-profile-link {
+            display: inline-block;
+            float: left;
+            margin-right: 5px;
+        }
+    }
+
+        .user-recipes {
+            padding-top: 20px;
+        }
 
 }
