--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -38,6 +38,7 @@
 @import 'components/spinner';
 @import 'components/text-editor';
 @import 'components/user-avatar';
+@import 'components/user-notifications';
 
 // application wide styles and overrides
 @import 'global';
