--- a/src/assets/stylus/components/user-notifications.styl
+++ b/src/assets/stylus/components/user-notifications.styl
@@ -10,6 +10,10 @@
 
         border-bottom: 1px solid #f1f1f1;
 
+        &:last-child {
+            border-bottom: none;
+        }
+
         &.unread {
             background-color: #58A6E6 + 95%;
         }
