show a user's login username in my profile

--- a/src/assets/stylus/views/profile.styl
+++ b/src/assets/stylus/views/profile.styl
@@ -9,4 +9,12 @@
         background-color: transparent;
     }
 
+    .username {
+        padding-bottom: 20px;
+
+        legend {
+            margin-bottom: 10px;
+        }
+    }
+
 }
