--- a/src/assets/stylus/components/comment.styl
+++ b/src/assets/stylus/components/comment.styl
@@ -9,8 +9,12 @@
 
     box-shadow: 0 1px 4px rgba(0,0,0,0.1);
 
-    p:last-child {
+    p {
+        margin-bottom: 5px;
+
+        &:last-child {
             margin-bottom: 0;
+        }
     }
 
     .about {
