--- a/src/assets/stylus/views/application.styl
+++ b/src/assets/stylus/views/application.styl
@@ -8,6 +8,19 @@
     input.short-numeric {
         height: 25px;
         width: 60px;
+        text-align: center;
+    }
+
+    input.compact-numeric {
+        height: 25px;
+        width: 45px;
+        text-align: center;
+    }
+
+    input.super-short-numeric {
+        height: 25px;
+        width: 30px;
+        text-align: center;
     }
 
     table.table-super-condensed {
