refs #43 - feed view - wip

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -21,6 +21,7 @@
 @import 'components/button-user-notifications';
 @import 'components/comment';
 @import 'components/facebook-comments';
+@import 'components/feed-item';
 @import 'components/footer';
 @import 'components/form-save-recipe';
 @import 'components/google-comments';
