--- a/src/assets/stylus/global.styl
+++ b/src/assets/stylus/global.styl
@@ -17,3 +17,9 @@
     }
 
 }
+
+.btn-numbered-page, .btn-next-page, .btn-prev-page, .btn-first-page, .btn-last-page   {
+    a {
+        cursor: pointer;
+    }
+}
