--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -4,10 +4,12 @@
 @import 'views/application';
 @import 'views/calculator';
 @import 'views/main-landing';
+@import 'views/my-status-updates';
 @import 'views/oil';
 @import 'views/profile';
 @import 'views/recipe';
 @import 'views/recipes';
+@import 'views/status-update';
 @import 'views/user-profile';
 
 //modals
