--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -28,6 +28,7 @@
 @import 'components/form-save-recipe';
 @import 'components/google-comments';
 @import 'components/grid-oil';
+@import 'components/imageable';
 @import 'components/list-oils-recipe';
 @import 'components/list-oils-selector';
 @import 'components/markdown-editor';
