--- a/src/assets/stylus/overrides.styl
+++ b/src/assets/stylus/overrides.styl
@@ -59,3 +59,14 @@ body {
 .popover {
     max-width: 100%;
 }
+
+.carousel {
+    .carousel-inner {
+        .item {
+            img {
+                margin: auto;
+            }
+        }
+    }
+
+}
