refs #41 - recipe edit add/remove images

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -29,6 +29,7 @@
 @import 'components/google-comments';
 @import 'components/grid-oil';
 @import 'components/imageable';
+@import 'components/imageable-edit';
 @import 'components/list-oils-recipe';
 @import 'components/list-oils-selector';
 @import 'components/markdown-editor';
