--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -30,6 +30,7 @@
 @import 'components/grid-oil';
 @import 'components/imageable';
 @import 'components/imageable-edit';
+@import 'components/imageable-thumbnails';
 @import 'components/list-oils-recipe';
 @import 'components/list-oils-selector';
 @import 'components/markdown-editor';
