--- a/src/assets/stylus/views/my-status-updates.styl
+++ b/src/assets/stylus/views/my-status-updates.styl
@@ -18,7 +18,7 @@
         border: 1px solid silver + 50%;
         border-radius: 3px;
 
-        box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 
         p {
             margin-bottom: 5px;
@@ -27,6 +27,10 @@
                 margin-bottom: 0;
             }
         }
+    }
+
+    .dropzone {
+        margin-bottom: 20px;
     }
 
 }
