--- a/src/assets/stylus/components/imageable-edit.styl
+++ b/src/assets/stylus/components/imageable-edit.styl
@@ -5,6 +5,11 @@
             border-color: red;
         }
 
+        img {
+            margin-top: 8px;
+            border-radius: 5px;
+        }
+
         .caption {
             text-align: center;
 
