--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -10,6 +10,7 @@
 @import 'views/recipe';
 @import 'views/recipes';
 @import 'views/status-update';
+@import 'views/status-update-edit';
 @import 'views/user-profile';
 
 //modals
