--- a/src/assets/stylus/views/my-status-updates.styl
+++ b/src/assets/stylus/views/my-status-updates.styl
@@ -29,6 +29,12 @@
         }
     }
 
+    .actions {
+        span {
+            margin-left: 10px;
+        }
+    }
+
     .dropzone {
         margin-bottom: 20px;
     }
