--- a/src/assets/stylus/components/feed-item.styl
+++ b/src/assets/stylus/components/feed-item.styl
@@ -7,7 +7,7 @@
     border: 1px solid silver + 50%;
     border-radius: 3px;
 
-    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 
     p {
         margin-bottom: 5px;
@@ -24,6 +24,12 @@
 
     span.time, span.link {
         padding-left: 5px;
+    }
+
+    .thumbnail {
+        margin-bottom: 10px;
+        margin-left: 0 !important;
+        margin-right: 10px;
     }
 
 }
