--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -9,6 +9,7 @@
 @import 'views/profile';
 @import 'views/recipe';
 @import 'views/recipes';
+@import 'views/recipe-journal-edit';
 @import 'views/status-update';
 @import 'views/status-update-edit';
 @import 'views/user-profile';
@@ -38,6 +39,8 @@
 @import 'components/media-signin-buttons';
 @import 'components/navbar-component';
 @import 'components/properties-oil';
+@import 'components/recipe-journal-add';
+@import 'components/recipe-journal-item';
 @import 'components/recipe-list-item';
 @import 'components/recipe-print-area';
 @import 'components/sap-calculator';
