--- a/src/assets/stylus/views/profile.styl
+++ b/src/assets/stylus/views/profile.styl
@@ -17,4 +17,11 @@
         }
     }
 
+    .friend-profile-link {
+        display: inline-block;
+        float: left;
+        margin-right: 5px;
+    }
+
+
 }
