--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -3,6 +3,7 @@
 //views
 @import 'views/application';
 @import 'views/calculator';
+@import 'views/forgot';
 @import 'views/main-landing';
 @import 'views/my-status-updates';
 @import 'views/oil';
