add tooltips on certain claculator options

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'mixins';
 
 //views
 @import 'views/application';
@@ -48,6 +49,7 @@
 @import 'components/share-this';
 @import 'components/spinner';
 @import 'components/text-editor';
+@import 'components/tooltip-question';
 @import 'components/user-avatar';
 @import 'components/user-notifications';
 
