--- a/src/assets/stylus/components/feed-item.styl
+++ b/src/assets/stylus/components/feed-item.styl
@@ -9,22 +9,7 @@
 
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 
-    p {
-        margin-bottom: 5px;
-
-        &:last-child {
-            margin-bottom: 0;
-        }
-    }
-
-    .about {
-        font-size: 12px;
-        height: 18px;
-    }
-
-    span.time, span.link {
-        padding-left: 5px;
-    }
+    media-common-styles();
 
     .thumbnail {
         margin-bottom: 10px;
