cleanup share buttons

--- a/src/assets/stylus/components/share-this.styl
+++ b/src/assets/stylus/components/share-this.styl
@@ -4,5 +4,14 @@
     .t-cell {
         padding-left: 10px;
         vertical-align: top;
+
+        .btn-pinterest {
+            background-color: #bd081c;
+        }
+
+        .btn-reddit {
+            background-color: #ff5700;
+        }
+
     }
 }
