add fatty acid property tooltips

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -41,6 +41,7 @@
 @import 'components/media-signin-buttons';
 @import 'components/navbar-component';
 @import 'components/properties-oil';
+@import 'components/recipe-fatty-acids';
 @import 'components/recipe-journal-add';
 @import 'components/recipe-journal-item';
 @import 'components/recipe-list-item';
